syntax = "proto3";

option go_package = "github.com/omaqase/sato/product/pkg/api/v1/product;protobuf";
package api.v1.product;

// Product Creation Request.
message CreateProductRequest {
  string title = 1 [json_name = "title"];
  string description = 2 [json_name = "description"];
  double price = 3 [json_name = "price"];
  string category_id = 4 [json_name = "category_id"];
}

// Product Creation Response.
message CreateProductResponse {
  string id = 1 [json_name = "id"];
  string title = 2 [json_name = "title"];
  string description = 3 [json_name = "description"];
  double price = 4 [json_name = "price"];
  string category_id = 5 [json_name = "category_id"];
  string created_at = 6 [json_name = "created_at"];
  string updated_at = 7 [json_name = "updated_at"];
}

// Request to retrieve the product by ID.
message GetProductByIdRequest {
  string id = 1 [json_name = "id"];
}

// Response to get the product by ID.
message GetProductByIdResponse {
  string id = 1 [json_name = "id"];
  string title = 2 [json_name = "title"];
  string description = 3 [json_name = "description"];
  double price = 4 [json_name = "price"];
  string category_id = 5 [json_name = "category_id"];
  string created_at = 6 [json_name = "created_at"];
  string updated_at = 7 [json_name = "updated_at"];
}

// Request to update the product.
message UpdateProductRequest {
  string id = 1 [json_name = "id"];
  string title = 2 [json_name = "title"];
  string description = 3 [json_name = "description"];
  double price = 4 [json_name = "price"];
  string category_id = 5 [json_name = "category_id"];
}

// Responding to a product update.
message UpdateProductResponse {
  string id = 1 [json_name = "id"];
  string title = 2 [json_name = "title"];
  string description = 3 [json_name = "description"];
  double price = 4 [json_name = "price"];
  string category_id = 5 [json_name = "category_id"];
  string created_at = 6 [json_name = "created_at"];
  string updated_at = 7 [json_name = "updated_at"];
}

// Request to delete a product.
message DeleteProductRequest {
  string id = 1 [json_name = "id"];
}

// Response to product deletion.
message DeleteProductResponse {
  int32 status = 1;
}

// Request to retrieve a list of products.
message ListProductsRequest {
  int32 page = 1 [json_name = "page"];
  int32 limit = 2 [json_name = "limit"];
}

// Response to receive a list of products.
message ListProductsResponse {
  repeated GetProductByIdResponse products = 1 [json_name = "products"];
  int32 total_count = 2 [json_name = "total_count"];
}